--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,20 +2,24 @@ name: build-scorecard
 on:
   workflow_dispatch:
   schedule:
-    # Every Monday 14:15 UTC (~9:15am ET)
-    - cron: '15 14 * * MON'
+    # Phase 3: Daily updates at 14:15 UTC (~9:15am ET) for real-time signals
+    - cron: '15 14 * * *'
 jobs:
   run:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      # Optional: Add AIRNOW_API_KEY as GitHub secret for real-time air quality
+      AIRNOW_API_KEY: ${{ secrets.AIRNOW_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       - run: pip install -r requirements.txt
-      - run: python src/pipeline.py
+      - name: Run Phase 3 pipeline
+        run: python src/pipeline.py
       - name: Commit artifacts
         run: |
           git config user.name "scorecard-bot"
