Phase 4: School-Level Granularity - 51 Schools with Tract-Level Health Data
🎉 THE BIG UNLOCK: Expanded from 5 counties → 51 individual schools!

✅ NEW FEATURES:
- School-level health readiness scoring (51 schools)
- Census tract geocoding (72.5% success rate, 37/51 schools)
- Tract-level CDC PLACES data (32 unique tracts)
- Interactive searchable HTML table (docs/schools.html)
- Search/filter/sort functionality
- School statistics dashboard
- Dual county ↔ school navigation

📊 KEY INSIGHTS:
- Darnell-Cookman & Lavilla schools highest need (48.5 score)
- Tract-level shows 12% variation within Duval County
- Nassau County schools are healthiest (avg 15.4 score)
- Duval has 25 schools, all above county needs

🔧 TECHNICAL:
- New modules: schools.py (655 lines), schools_html.py (200 lines)
- Extended school dataset: 51 Jacksonville-area schools
- Census Geocoder API integration (free, no key)
- GitHub Actions: Added school pipeline steps
- Outputs: school_scorecard.csv (8.2KB) + schools.html (25KB)

📁 FILES ADDED:
- src/schools.py - School data pipeline
- src/schools_html.py - Interactive HTML generator
- data/jacksonville_schools_extended.csv - School roster (52 schools)
- data/school_scorecard.csv - Scored schools
- data/schools_phase4.csv - Schools with geocoding
- docs/schools.html - Interactive school table
- PHASE4_RELEASE_NOTES.md - Complete changelog

This is THE sellable feature - school districts can now see exactly which schools need intervention!

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,8 +18,14 @@ jobs:
         with:
           python-version: '3.11'
       - run: pip install -r requirements.txt
-      - name: Run Phase 3 pipeline
+      - name: Run Phase 3 county pipeline
         run: python src/pipeline.py
+      - name: Run Phase 4 school pipeline
+        run: python src/schools.py
+        continue-on-error: true
+      - name: Regenerate school HTML
+        run: python src/schools_html.py
+        continue-on-error: true
       - name: Commit artifacts
         run: |
           git config user.name "scorecard-bot"
