Phase 5: Polish & Promote - Historical Trends + Outreach Materials
✅ POLISH FEATURES:
- Historical trend tracking (src/trends.py)
- Daily archival system (data/history/)
- Trend JSON summaries for visualization
- Integrated into main pipeline + GitHub Actions

📣 PROMOTIONAL MATERIALS:
- OUTREACH_TEMPLATES.md - Email templates for districts
- USER_GUIDE.md - Comprehensive how-to guide + FAQ
- Press release template
- Social media posts (Twitter/LinkedIn)
- Blog post outline
- Demo video script
- Cold call script

📊 DOCUMENTATION UPDATES:
- README: Updated to 93 schools (was 51)
- Phase 5 roadmap status
- School type breakdown (38 elem, 13 middle, 42 high)
- Enhanced .gitignore for all data files

🎯 READY FOR OUTREACH:
- All templates ready to use
- User guide answers common questions
- Trend system will track improvements over time

Total schools: 93 K-12 (41% elementary coverage achieved!)

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Regenerate school HTML
         run: python src/schools_html.py
         continue-on-error: true
+      - name: Archive for trends (Phase 5)
+        run: python src/trends.py
+        continue-on-error: true
       - name: Commit artifacts
         run: |
           git config user.name "scorecard-bot"
