INVESTOR-READY: Complete webapp redesign
🎯 INSIGHT-DRIVEN DESIGN:

LANDING PAGE (index.html):
- Key insights displayed upfront (63% within-county variation)
- Executive metrics: Top 10 schools, healthiest county
- Natural search flow: Search → Schools → Action
- Clean, professional design (Bloomberg/NYT style)
- No clutter, insights before data

SCHOOL DASHBOARD (schools.html):
- 5 key metrics at top: High/Medium/Low need + Dual burden
- Key insights panel (black box): What matters, why it matters
- Filter by need level (High/Medium/Low) - insight first
- Each school card shows:
  * Score with color coding
  * 4 key indicators (chronic disease, doctor shortage, enrollment, respiratory)
  * ACTIONABLE RECOMMENDATION specific to that school
- Natural flow: Filter → Find → Understand → Act

CORRELATIONS & INSIGHTS:
- Dual burden indicator: Schools with BOTH high chronic disease AND doctor shortage
- Within-county variance highlighted
- Duval concentration explained
- Nassau benchmark identified
- 21 schools flagged for immediate nurse placement

USER EXPERIENCE:
- Simple navigation: Home → Schools → Counties
- Search from landing page
- Filter before exploring
- Recommendations for every school:
  * High need: "Priority Action: Place full-time nurse"
  * Medium need: "Consider: Part-time nurse or wellness coordinator"
  * Low need: "Maintain: Standard health program"

TECHNICAL:
- Dashboard-style cards (not table)
- Responsive grid (360px cards)
- Clean filtering (no page reload)
- Mobile optimized
- Fast, modern, professional

FOR INVESTORS:
- Insights before data
- Actionable metrics
- Clear correlations
- Professional design
- Scales to other regions

This is ready to present.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,11 +20,11 @@ jobs:
       - run: pip install -r requirements.txt
       - name: Run Phase 3 county pipeline
         run: python src/pipeline.py
-      - name: Run Phase 4 school pipeline
+      - name: Run school data pipeline
         run: python src/schools.py
         continue-on-error: true
-      - name: Regenerate school HTML
-        run: python src/schools_html.py
+      - name: Generate insight-driven dashboard
+        run: python src/schools_dashboard.py
         continue-on-error: true
       - name: Archive for trends (Phase 5)
         run: python src/trends.py
